service-apiserver.yaml
apiVersion: v1
kind: Service
metadata: 
  name: api-server
spec: 
  selector: 
    app: api-server
  type: NodePort 
  ports: 
  - name: http 
    port: 80 
    protocol: TCP 
    targetPort: 80
