service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    run: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    run: redis
