sevice-apiserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: default
spec:
  selector:
    app: auth-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
