ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apiserver
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: myalb
spec:
  rules:
    - http:
        paths:
          - path: "/"
            backend:
              serviceName: api-server
              servicePort: 80
          - path: /auth
            backend:
              serviceName: auth-server
              servicePort: 80
